[workspace]
resolver = "3"
members = ["kitty-keep", "kitty-keep-cli", "kitty-keep-gui", "kitty-keep-lib"]

[workspace.package]
readme = "README.md"
authors = ["KitsuVM <nashiradeer@gmail.com>"]
repository = "https://github.com/KitsuVM/kitty-keep"
license = "GPL-3.0"

[workspace.dependencies]
cbindgen = "0.29.2"
hex = "0.4.3"
kitty-keep = { path = "./kitty-keep", version = "0.1.0" }