[package]
name = "kitty-keep"
description = "Core library for the Kitty Keep storage tool, designed to reduce disk usage by up to 90% using file deduplication techniques, high compression algorithms, and more efficient alternative file formats."
version = "0.1.0"
edition = "2024"
categories = ["compression", "database-implementations", "multimedia"]
keywords = ["kitty-keep", "storage", "deduplication", "compression"]
readme.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
hex.workspace = true